[tool.poetry]
name = "personal-scripts"
version = "0.1.0"
description = ""
authors = ["Thatode Sai Surya Abishek <athatode@athenahealth.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
